--- a/gb/20/9/3/n12378317.md
+++ b/gb/20/9/3/n12378317.md
@@ -1,65 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jjctll335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jjctll335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jjctll335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jjctll335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jjctll335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jjctll335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jjctll335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jjctll335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jjctll335/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jjctll335/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jjctll335/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jjctll335/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jjctll335/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jjctll335/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jjctll335/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>大量中国制口罩冒充MIT 蔡英文作出回应</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>中国制口罩冒充MIT惹议 蔡英文作出回应</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/PO_X8780-600x400.jpg" />
 <h6>中华民国总统蔡英文。（陈柏州/大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年09月03日讯】中华民国总统<ahref="https://github.com/jjctll335/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>今天（3日）表示，昨天有药师通报，发现有口罩业者把中国制的非医用口罩，冒充成Made in Taiwan的医疗口罩销售，鱼目混珠，这是令人不能接受的行为。政府绝对查办到底，确保防疫没有破口。</p>
-<p>中央社报导，<ahref="https://github.com/jjctll335/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>晚间在脸书发文表示，中国制口罩冒充MIT，政府绝对查办到底，确保防疫没有破口。</p>
-<p>蔡英文说，昨天有药师通报，发现有业者把中国制的非医用口罩，冒充成Made in Taiwan的医疗口罩销售，鱼目混珠，严重影响口罩<ahref="https://github.com/jjctll335/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E9%98%9F.md#1">国家队</a>辛苦累积的信誉。这是令人不能接受的行为。</p>
+<p>【大纪元2020年09月03日讯】中华民国总统<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>今天（3日）表示，昨天有药师通报，发现有口罩业者把中国制的非医用口罩，冒充成Made in Taiwan的医疗口罩销售，鱼目混珠，这是令人不能接受的行为。政府绝对查办到底，确保防疫没有破口。</p>
+<p>中央社报导，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>晚间在脸书发文表示，中国制口罩冒充MIT，政府绝对查办到底，确保防疫没有破口。</p>
+<p>蔡英文说，昨天有药师通报，发现有业者把中国制的非医用口罩，冒充成Made in Taiwan的医疗口罩销售，鱼目混珠，严重影响口罩<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E9%98%9F.md#1">国家队</a>辛苦累积的信誉。这是令人不能接受的行为。</p>
 <p>蔡英文表示，目前，卫生福利部已经查获冒充的口罩，停止该厂商的生产和出货作业，并扩大追查还有没有其他违规业者。对于违规厂商的行为，一定会要求主管机关清查清楚，依法开罚。检调单位也正在介入侦办。</p>
 <p>蔡英文指出，如果有北部民众买到标示“Carry mask”的口罩，可以在9月4日到9月11日之间，前往有贩售口罩实名制1.0的药局或卫生所换货。</p>
-<p>蔡英文表示，违法行为绝不允许，一定查办到底，不会让鱼目混珠的违规产品，影响口罩<ahref="https://github.com/jjctll335/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E9%98%9F.md#1">国家队</a>的奉献和付出。</p>
+<p>蔡英文表示，违法行为绝不允许，一定查办到底，不会让鱼目混珠的违规产品，影响口罩<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E9%98%9F.md#1">国家队</a>的奉献和付出。</p>
 <p>责任编辑：陈安</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/27/n12361748.md#1">台海紧张升温 蔡英文：避免擦枪走火</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/28/n12363874.md#1">放宽美猪牛进口 蔡英文：台湾经济在历史转折点</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/28/n12364135.md#1">F-16维修中心成立 蔡英文：确保前线空优战力</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/1/n12372807.md#1">后疫情时代保有优势 蔡英文：创新能量是关键</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/2/n12374824.md#1">放宽美猪美牛 蔡英文：基于经济利益没有交换说</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/2/n12375320.md#1">放宽美猪美牛进口 蔡英文：没有“交换说”</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/3/n12378224.md#1">爱奇艺正式在台终结！经部今发公告确认禁止</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/3/n12378161.md#1">OTT专法公听会 业者：盗版业者也应纳管</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/3/n12378131.md#1">“台港服务交流办公室”明年预算增7倍</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/3/n12377961.md#1">党产会声请法官回避 学者：已有违宪心证如何中立？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/27/n12361748.md#1">台海紧张升温 蔡英文：避免擦枪走火</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/28/n12363874.md#1">放宽美猪牛进口 蔡英文：台湾经济在历史转折点</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/28/n12364135.md#1">F-16维修中心成立 蔡英文：确保前线空优战力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/1/n12372807.md#1">后疫情时代保有优势 蔡英文：创新能量是关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/2/n12374824.md#1">放宽美猪美牛 蔡英文：基于经济利益没有交换说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/2/n12375320.md#1">放宽美猪美牛进口 蔡英文：没有“交换说”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616460.md#1">美不出兵援乌克兰 专家：台湾反而越安全</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616463.md#1">台湾基进：今日俄罗斯 明日中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616465.md#1">台外交部公布赈济乌克兰专户</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616470.md#1">台海情势受关注 蔡英文：民主是唯一选项</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241790.md#1" target="_blank">共产暴政录：柬共屠杀300万民众及30万华人</a></li><li><a href="https://github.com/jjctll335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9814027.md#1" target="_blank">十月革命百年 美重磅评论剖析共产主义罪恶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/31/n12368878.md#1">妈妈昏倒 5岁儿打“玩具救护车”上号码救母</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/6/13/n12183566.md#1">贾雨村，一个从来不曾过时的现实主义者</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/10/n12318960.md#1">【命理】什么时候能找到男朋友？</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/2/n12374910.md#1">【纪元播报】东风集团两虎落马 传涉军车腐败大案</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/26/n12358574.md#1">【欺世大观】唐山1976年大地震死多少人？</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/3/n12376889.md#1">【西岸观察】邮寄选票加剧美国大选不确定性</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/1/n12372846.md#1">捷克市长致信王毅：你是无理的粗鲁小丑</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/1/n12373757.md#1">中共呛声发起台海战争 美军机疑降台湾</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/1/n12372566.md#1">中印边境冲突地区 印度军官被步兵战车压死</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/1/n12373697.md#1">二亿元飞机半价也卖不出 赵本山遭女儿吐槽</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/3/n12376709.md#1">巨石强森惊爆确诊中共肺炎 全家都中镖</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/31/n12371304.md#1">7天内2起官司 范冰冰借工作室感叹人情冷暖</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/31/n12369774.md#1">140公斤日本网红年减体重一半 胖男变帅哥</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/2/n12375748.md#1">黄秋生生日许愿：将一生所学教给台湾下一代</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/1/n12372441.md#1">俄公布“沙皇炸弹”测试画面 史上最强核爆</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/9/2/n12374745.md#1">流浪狗被涂画成老虎 马国动保团体悬赏缉凶</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/31/n12369774.md#1">140公斤日本网红年减体重一半 胖男变帅哥</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/31/n12370955.md#1">伸展让身体柔软 有3大好处 1动作消除脖子僵硬</a></li>
-<li><a href="https://github.com/jjctll335/djy/blob/master/gb/20/8/31/n12369943.md#1">短片：俄Su-27战机危险拦截美B-52轰炸机</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jjctll335/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jjctll335/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/3/n12378317.htm">大量中国制口罩冒充MIT 蔡英文作出回应</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/3/n12378317.htm">中国制口罩冒充MIT惹议 蔡英文作出回应</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/jjctll335/djy/blob/master/gb/20/9/3/n12378317.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jjctll335/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jjctll335/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jjctll335/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jjctll335/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jjctll335/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/3/n12378317.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
